fix overlapping issue with preloader and header

--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -33,70 +33,67 @@ body
     overflow hidden
     background linear-gradient(#E0E4FF, #B0B8FF)
 
-
 /**
  * PRELOADER
  */
 
 @import url("http://fonts.cdnfonts.com/css/monument-extended");
 
-.preloader-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background: #2C2F33; // Darker background color
-  z-index: 9999; // Ensure it is on top of other elements
-}
+.preloader-container
+  display: flex
+  justify-content: center
+  align-items: center
+  width: 100vw
+  height: 100vh
+  position: fixed
+  top: 0
+  left: 0
+  background: #2C2F33 // Darker background color
+  z-index: 9999 // Ensure it is on top of other elements
 
-.preloader-container h1 {
-  font-family: "Monument Extended", sans-serif;
-  font-size: 100px;
-  position: relative;
-  -webkit-text-stroke: 1px #99AAB5;
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  transform: translateY(100%);
-  letter-spacing: 1px;
-  font-weight: 900;
-  text-transform: uppercase;
-}
+.preloader-container.finished
+  z-index: -1 // Lower the z-index or remove it
 
-.preloader-container h1::before {
-  content: attr(data-title);
-  position: absolute;
-  background: #99AAB5; // Darker text color
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: var(--preloader);
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  transition: all ease 0.1s;
-}
+.preloader-container h1
+  font-family: "Monument Extended", sans-serif
+  font-size: 100px
+  position: relative
+  -webkit-text-stroke: 1px #99AAB5
+  background-clip: text
+  -webkit-background-clip: text
+  color: transparent
+  transform: translateY(100%)
+  letter-spacing: 1px
+  font-weight: 900
+  text-transform: uppercase
 
-.hide-text {
-  display: inline-flex;
-  overflow: hidden;
-}
+.preloader-container h1::before
+  content: attr(data-title)
+  position: absolute
+  background: #99AAB5 // Darker text color
+  top: 0
+  left: 0
+  right: 0
+  bottom: 0
+  width: var(--preloader)
+  background-clip: text
+  -webkit-background-clip: text
+  color: transparent
+  transition: all ease 0.1s
 
-.count {
-  font-family: "Monument Extended", sans-serif;
-  font-size: 300px;
-  color: transparent;
-  position: absolute;
-  -webkit-text-stroke: 1px #99AAB5;
-  transition: all ease 1s;
-  font-weight: 900;
-  text-transform: uppercase;
-}
+.hide-text
+  display: inline-flex
+  overflow: hidden
+
+.count
+  font-family: "Monument Extended", sans-serif
+  font-size: 300px
+  color: transparent
+  position: absolute
+  -webkit-text-stroke: 1px #99AAB5
+  transition: all ease 1s
+  font-weight: 900
+  text-transform: uppercase
 /**
  * TYPO
  */
@@ -424,39 +421,43 @@ img.unmute{
 
 /* Media Queries for Responsive Design */
 @media (max-width: 768px)
-    .header
-        flex-direction column
-        align-items flex-start
-        padding 20px
+  
+  .header
+    flex-direction row
+    align-items flex-start
+    padding 20px
 
-        .logo
-            width 25px
-            height 25px
-            margin-bottom 10px
+    .logo
+      width 40px
+      height 40px
+      margin-bottom 10px
 
-        h2
-            font-size 4vw
-            margin 5px 0
+    h2
+      font-size 14px
+      margin 5px 0
 
-        .sounds
-            flex-direction column
-            align-items flex-start
-            margin-top 10px
+    .sounds
+      flex-direction column
+      align-items flex-start
+      margin-top 10px
+  
 
-    .modal .title h1
-        font-size 10vw
+  .modal .title h1
+    font-size 12vw  
 
-    .modal .container
-        width 100%
-        padding 10px
+  .modal .container
+    width 100%
+    padding 10px
 
-    button
-        width 80px
-        height 30px
+  button
+    width 50%
+    height 50px
+    font-size 3vw
+    margin 10px auto
 
-    .canvas
-        width 100vw
-        height 50vh
+  .canvas
+    width 100vw
+    height 50vh
 
 @media (max-width: 480px)
   .canvas
@@ -497,7 +498,7 @@ img.unmute{
       height 400px // Increased height
 
     h2
-      font-size 40vw // Adjusted font size to a more reasonable value
+      font-size 40vw // Adjusted font size
       margin 10px 0 // Adjusted margin
 
     .sounds
@@ -560,12 +561,8 @@ img.unmute{
         right 10px
 
   .preloader-container
-    display none
-
     h1
-      font-size 10vw
-      -webkit-text-stroke 0.5px #21258A
-
+      font-size 30px
+    
     .count
-      font-size 20vw
-      -webkit-text-stroke 0.5px #21258A
+      font-size 100px
